--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -32,7 +32,6 @@
 
     .header-web-item {
       display: unset;
-      cursor: pointer;
       padding: unset !important;
     }
 
@@ -44,12 +43,20 @@
         height: 3rem !important;
         width: unset;
         margin: 0 !important;
+
+        &:hover {
+          cursor: pointer;
+        }
       }
 
       & > span {
         margin-left: 1rem;
         font-weight: 700;
         color: $secondary-color;
+
+        &:hover {
+          cursor: pointer;
+        }
       }
     }
 
@@ -66,6 +73,7 @@
         &:hover {
           border-bottom: 0.2rem solid $secondary-color;
           margin-bottom: unset !important;
+          cursor: pointer;
         }
       }
     }
@@ -98,6 +106,10 @@
             margin-top: 0.4rem;
             width: 3.125rem;
           }
+        }
+
+        &:hover {
+          cursor: pointer;
         }
       }
 
